class_name OptionsMenu
extends  Control

@onready var resolution_dropdown: OptionButton = %Resolution
@onready var fullscreen_checkbox: CheckBox = %Fullscreen
@onready var master_volume: HSlider = %MasterVolume
@onready var music_volume: HSlider = %MusicVolume
@onready var sfx_volume: HSlider = %SFXVolume
@onready var reset_button: Button = %ResetButton
@onready var back_button: Button = %BackButton
@onready var background: TextureRect = %Background
